--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -115,12 +115,12 @@
       margin-bottom: 0;
       list-style: none;
       padding-left: 0;
-      border: solid _size(border-width) _palette(border);
+      // border: solid _size(border-width) _palette(border);
       border-radius: _size(border-radius);
 
       li {
-        padding-left: 0;
-        border-left: solid _size(border-width) _palette(border);
+        // padding-left: 0;
+        // border-left: solid _size(border-width) _palette(border);
 
         &:first-child {
           border-left: 0;
@@ -130,7 +130,7 @@
           display: block;
           min-width: 7.5rem;
           height: 2.75rem;
-          line-height: 2.75rem;
+          // line-height: 2.75rem;
           padding: 0 1.25rem 0 (1.25rem + _font(letter-spacing));
           text-transform: uppercase;
           letter-spacing: _font(letter-spacing);
@@ -256,7 +256,7 @@
 
         li {
           border-left: 0;
-          border-top: solid _size(border-width) _palette(border);
+          // border-top: solid _size(border-width) _palette(border);
 
           &:first-child {
             border-top: 0;
