--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -21,8 +21,8 @@
 
 // Font.
 	$font: (
-		family:						('Source Sans Pro', sans-serif),
-		family-fixed:				('Courier New', monospace),
+		family:						('Overpass', sans-serif),
+		family-fixed:				('Overpass Mono', monospace),
 		weight:						300,
 		weight-bold:				600,
 		letter-spacing:				0.2rem,
